main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}

# Networking
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    tags = {
      Name = "main-vpc"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    
    tags = {
    Name = "public-subnet"
  }
}

resource "aws_internet_gateway" "gw" {
    vpc_id = aws_vpc.main.id
    
    tags = {
      Name = "main-igw"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }

    tags = {
    Name = "public-route-table"
  }
}

resource "aws_route_table_association" "public" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}

# Security

resource "aws_key_pair" "cloud_sim_key" {
    key_name = "cloud-sim-key"
    public_key = file("~/.ssh/cloud-sim-key.pub")
}

resource "aws_security_group" "web_server_sg" {
  name        = "web-server-sg"
  description = "Allow SSH and HTTP inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "SSH from my IP"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["136.47.155.189/32"] # <-- IMPORTANT: REPLACE THIS
  }

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1" # "-1" means all protocols
    cidr_blocks      = ["0.0.0.0/0"]
  }

    tags = {
    Name = "web-server-sg"
  }
}
# --- EC2 INSTANCE ---

# Find the latest Amazon Linux 2 AMI
data "aws_ami" "amazon_linux_2" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# Create a web server
resource "aws_instance" "web_server" {
  ami           = data.aws_ami.amazon_linux_2.id
  instance_type = "t2.micro" # This is eligible for the AWS Free Tier
  subnet_id = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.web_server_sg.id]
  key_name = aws_key_pair.cloud_sim_key.key_name

  tags = {
    Name = "Cloud-Incident-Sim-Server"
  }
}

output "web_server_public_ip" {
    description = "The public IP address of our EC2 instance"
    value = aws_instance.web_server.public_ip
}
